chore: update dependencies, improve some

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,7 +37,7 @@
       "cancel_request": "Operation canceled due to new request."
     },
     "pagination": {
-      "info": "{{startIndex}} - {{endIndex}} of {{totalRecords}} records",
+      "info": "{{from}} - {{to}} / {{totalRecords}} records",
       "page_size": "{{size}}/page"
     },
 
