feat: devices - update form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -92,6 +92,7 @@
     "detail": "Device details",
     "name": "Device Name",
     "deviceProfile": "Device profile",
+    "deviceProfileName": "Device profile name",
     "customer": "Customer",
     "public": "Public",
     "isGateway": "Is gateway",
